# libinklevel

./: AUTHORS  Android.mk  ChangeLog  Makefile.am  Makefile.in  NEWS  README  bjnp-debug.c  bjnp-io.c  bjnp.h  canon.c  canon.h  config.h  config.h.in  configure  configure.in  d4lib.c  epson_new.c  epson_new.h  hp_new.c  hp_new.h  inklevel.h  internal.h  libinklevel.c  libinklevel.spec  libinklevel.spec.in  linux.c  opensolaris.c  platform_specific.h  rpmbuild  util.c  util.h
ink/: Android.mk  Makefile  ink.c
